@@ -18,6 +18,10 @@
 			<td><%= auto_link(simple_format(@torrent.description)) %></td>
 		</tr>
 		<tr>
+			<td class="tlabel">Category</td>
+			<td><%= link_to(@torrent.category.name, {:controller => 'torrents', :action => 'browse', :cat => @torrent.category_id}) %></td>
+		</tr>
+		<tr>
 			<td class="tlabel">Size</td>
 			<td><%= number_to_human_size(@torrent.size)%> (<%= number_with_delimiter(@torrent.size) %> bytes)</td>
 		</tr>
