@@ -158,6 +158,13 @@ border: 1px solid black;
   text-align: right; width: 100%;
 }
 
+#browse_cats {
+  margin: 10px;
+  padding-left: 40px;
+}
+.toggle_links a{
+  text-decoration: none;
+}
 /*  Table Styling */
 
 table,td,th{
